# RadonFastEntityComponentSystem

./: CMakeLists.txt
include/RFECS/: Allocator.hpp  BaseComponent.hpp  BaseComponentManager.hpp  BaseComponentProcessor.hpp  Collector.hpp  ComponentManager.hpp  ComponentProcessor.hpp  Entity.hpp  SharedAttributePool.hpp
src/: BaseComponentManager.cpp  BaseComponentProcessor.cpp  Collector.cpp  SharedAttributePool.cpp
tests/ResourceTest/: CMakeLists.txt
tests/ResourceTest/src/: Components.cpp  main.cpp
